change files' name

--- a/html-basic.html
+++ b/html-basic.html
@@ -41,9 +41,13 @@
     &lt;!-- 这段注释需要出现在页面里面 --&gt;
     <p></p>
     <p></p>
-    <pre>      function a() {
-        return 8
-      }</pre>
+    <pre>
+        <code>
+            function a() {
+              return 8       
+            }
+        </code>
+    </pre>
     <p></p>
     <hr>
     <ul>
@@ -86,8 +90,12 @@
         <dl>
             <dt title="gender">性别</dt>
             <dd>
-                <label><input type="radio" value="male" name="gender">男
-                    <label><input type="radio" value="female" name="gender">女
+                <label>
+                    <input type="radio" value="male" name="gender"> 男
+                </label>
+                <label>
+                    <input type="radio" value="female" name="gender"> 女
+                </label>
             </dd>
             <dt title="age">年龄</dt>
             <dd>
