--- a/css-block-layout.html
+++ b/css-block-layout.html
@@ -6,173 +6,120 @@
     <meta name="viewport" content="width=device-width">
     <title>JS Bin</title>
     <style>
+        html,
         body {
             margin: 0;
+            height: 100%;
         }
 
-        section {
+        div {
             background-color: black;
         }
 
-        div.a {
+        header {
             width: 600px;
-            margin-left: auto;
-            margin-right: auto;
             color: white;
+            margin-right: auto;
+            margin-left: auto;
+        }
 
+        p {
+            width: 600px;
+            margin-right: auto;
+            margin-left: auto;
+        }
+
+        section {
+            width: 600px;
+            margin: auto;
+            overflow: hidden;
         }
 
         main {
-            width: 600px;
-            margin: 16px auto;
-
-        }
-
-        div.c {
-            width: 180px;
-            height: 40px;
-            border: 3px solid black;
-            box-sizing: border-box;
-            text-align: center;
-            line-height: 40px;
-            background-color: pink;
-            margin: 15px 30px 0 0;
-        }
-
-        div.d {
-            width: 180px;
-            height: 40px;
-            border: 3px solid black;
-            box-sizing: border-box;
-            text-align: center;
-            line-height: 40px;
-            background-color: pink;
-            margin: 15px 30px 0 0;
-        }
-
-        div.e {
-            width: 180px;
-            height: 40px;
-            border: 3px solid black;
-            box-sizing: border-box;
-            text-align: center;
-            line-height: 40px;
-            background-color: pink;
-            margin: 15px 30px 0 0;
-        }
-
-        div.f {
-            width: 180px;
-            height: 40px;
-            border: 3px solid black;
-            box-sizing: border-box;
-            text-align: center;
-            line-height: 40px;
-            background-color: pink;
-            margin: 15px 30px 0 0;
-        }
-
-        div.product1 {
-            width: 180px;
-            height: 40px;
-            border: 3px solid black;
-            box-sizing: border-box;
-            text-align: center;
-            line-height: 40px;
-            background-color: pink;
+            width: 630px;
             margin: auto;
-            margin-top: -205px;
+            font-size: 0;
         }
 
-        div.product2 {
+        span {
+            display: inline-block;
             width: 180px;
             height: 40px;
-            border: 3px solid black;
-            box-sizing: border-box;
-            text-align: center;
-            line-height: 40px;
+            border: 3px solid;
             background-color: pink;
-            margin: auto;
-            margin-top: 15px;
+            box-sizing: border-box;
+            margin-right: 30px;
+            margin-bottom: 15px;
+            text-align: center;
+            line-height: 2;
+            font-size: 16px;
         }
 
-        div.product3 {
-            width: 180px;
-            height: 40px;
-            border: 3px solid black;
-            box-sizing: border-box;
-            text-align: center;
-            line-height: 40px;
-            background-color: pink;
-            margin-top: -205px;
-            margin-left: 420px;
-        }
-
-        div.product4 {
-            width: 180px;
-            height: 40px;
-            border: 3px solid black;
-            box-sizing: border-box;
-            text-align: center;
-            line-height: 40px;
-            background-color: pink;
-            margin-top: 15px;
-            margin-left: 420px;
-        }
-
-        div:not(.a):not(.b):not(.link):not(.paper):not(.end):hover {
+        span:hover {
             background-color: red;
         }
 
-        .link {
+        ul {
+            width: 600px;
+            margin: 0;
+            margin-left: auto;
+            margin-right: auto;
+            padding: 0;
+            list-style: none;
+        }
+
+        ul li {
             border-bottom: dotted 1px;
         }
 
-        .link:nth-child(14) {
-            padding-top: 15px;
-        }
-
-        .link:nth-child(18) {
+        ul li:last-child {
             border-bottom: none;
         }
 
-        .p1 {
-            background-color: violet;
+        footer {
             text-align: center;
+            margin-top: 1em;
+            background-color: violet;
         }
     </style>
 </head>
 
 <body>
+    <div>
+        <header>hello world 请调整浏览器窗口大小查看效果hello world 请调整浏览器窗口大小查看效果hello world 请调整浏览器窗口大小查看效果hello world
+            请调整浏览器窗口大小查看效果hello world 请调整浏览器窗口大小查看效果hello world 请调整浏览器窗口大小查看效果</header>
+    </div>
+    <p>
+        页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体
+        宽度600px
+        页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体
+        宽度600px
+    </p>
     <section>
-        <div class="a">hello world 请调整浏览器窗口大小查看效果hello world 请调整浏览器窗口大小查看效果hello world 请调整浏览器窗口大小查看效果hello world
-            请调整浏览器窗口大小查看效果hello world 请调整浏览器窗口大小查看效果hello world 请调整浏览器窗口大小查看效果</div>
+        <main>
+            <span>宽180高40(包含边框)</span>
+            <span>产品</span>
+            <span>产品</span>
+            <span>水平间隙30px</span>
+            <span>产品</span>
+            <span>产品</span>
+            <span>垂直间隙15px</span>
+            <span>产品</span>
+            <span>产品</span>
+            <span>边框宽度3px</span>
+            <span>产品</span>
+            <span>产品</span>
+        </main>
     </section>
-    <main>
-        <div class="b">页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体
-            宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体
-            宽度600px 页面主体 宽度600px 页面主体 宽度600px </div>
-        <div class="c">宽180高40(包含边框)</div>
-        <div class="d">水平间隙30px</div>
-        <div class="e">垂直间隙15px</div>
-        <div class="f">边框宽度3px</div>
-        <div class="product1">产品</div>
-        <div class="product2">产品</div>
-        <div class="product2">产品</div>
-        <div class="product2">产品</div>
-        <div class="product3">产品</div>
-        <div class="product4">产品</div>
-        <div class="product4">产品</div>
-        <div class="product4">产品</div>
-        <div class="link">link</div>
-        <div class="link">link</div>
-        <div class="link">link</div>
-        <div class="link">link</div>
-        <div class="link">link</div>
-    </main>
-    <p class="p1">©版权所有<br>本页所有布局均使用块元素</p>
-    </div>
-    </div>
+    <ul>
+        <li>link</li>
+        <li>link</li>
+        <li>link</li>
+        <li>link</li>
+        <li>link</li>
+    </ul>
+    <footer>©版权所有<br>本页所有布局均使用块元素
+    </footer>
 </body>
 
 </html>
