--- a/css-block-layout.html
+++ b/css-block-layout.html
@@ -81,6 +81,43 @@
             margin-top: 1em;
             background-color: violet;
         }
+
+
+        html,
+        body {
+            margin: 0;
+            height: 100vh;
+        }
+
+        div.float {
+            width: 645px;
+            height: 240px;
+            margin: auto;
+            background-color: #fff;
+        }
+
+        div.float span {
+            width: 180px;
+            height: 40px;
+            border: 3px solid;
+            margin: 7.5px 15px;
+            text-align: center;
+            line-height: 34px;
+            background-color: pink;
+        }
+
+        div.float span:nth-child(3n - 2) {
+            float: left;
+            clear: both;
+        }
+
+        div.float span:nth-child(3n - 1) {
+            float: left;
+        }
+
+        div.float span:nth-child(3n) {
+            float: left;
+        }
     </style>
 </head>
 
@@ -120,6 +157,25 @@
     </ul>
     <footer>©版权所有<br>本页所有布局均使用块元素
     </footer>
+
+
+
+
+
+    <div class="float">
+        <span>宽180高40(包含边框)</span>
+        <span>产品</span>
+        <span>产品</span>
+        <span>水平间隙30px</span>
+        <span>产品</span>
+        <span>产品</span>
+        <span>垂直间隙15px</span>
+        <span>产品</span>
+        <span>产品</span>
+        <span>边框宽度3px</span>
+        <span>产品</span>
+        <span>产品</span>
+    </div>
 </body>
 
 </html>
