--- a/noi.html
+++ b/noi.html
@@ -287,7 +287,7 @@
     } 
 </script>
 
-<script id="ch104/10">
+<script type="javascript" id="ch104/10">
     var 语文 = + prompt('语文 : ')
     var 数学 = + prompt('数学 : ')
     var count = 0
