--- a/noi.html
+++ b/noi.html
@@ -1,4 +1,4 @@
-<script type="javascript" id="ch103/01">
+<script id="ch103/01">
     var a = + prompt('input a number : ')
     var b = + prompt('input a number : ')
     var c = a + b
