--- a/paint.html
+++ b/paint.html
@@ -64,59 +64,138 @@
   */
 </script>
 <script>
+  // 在 坐标 (42, 42) 画出一个点
   dot(42, 42, 'black')
 
+  // 画一条水平实线，粗细为一个像素
   for (var x = 1; x <= 100; x++) {
     dot(x, 100, 'black')
   }
 
+  // 画一条垂直实线，粗细为一个像素
   for (var y = 1; y <= 100; y++) {
     dot(100, y, 'red')
   }
 
+  // 画一条一个实点一个空点的虚线
   for (var x = 1; x <= 100; x += 2) {
     dot(x, 120, 'orange')
   }
 
+  // 画一条两个实点两个空点的虚线
   for (var x = 0; x <= 100; x++) {
     if (x % 4 < 2) {
       dot(x, 140, 'aqua')
     }
   }
 
+  // 画一条三个实点两个空点的虚线
   for (var x = 0; x <= 100; x++) {
     if (x % 5 < 3) {
       dot(x, 160, 'pink')
     }
   }
 
+  // 画一条斜线
   for (var x = 200; x <= 300; x++) {
     var y = (1 / 3) * x
     dot(x, y, 'green')
   }
 
+  // 画一条30度的斜线（与x轴的夹角呈30度）
   for (var x = 300; x <= 400; x++) {
-    var y = 0 + Math.cos(Math.PI / 3) * (x - 300)
+    var y = Math.tan(Math.PI / 6) * (x - 300)
     dot(x, y, 'blue')
   }
 
+  // for (var x = 200; x <= 300; x++) {
+  //   var y = x * Math.sqrt(3) / 3
+  //   dot(x, y, 'red')
+  // }
+
+  // 画一条60度的斜线（与x轴的夹角呈60度）
   for (var x = 400; x <= 500; x++) {
-    var y = 0 + Math.sin(Math.PI / 3) * (x - 400)
+    var y = Math.tan(Math.PI / 3) * (x - 400)
     dot(x, y, 'brown')
   }
 
-  for (var x = 0; x <= 1000; x++) {
-    var y = x
-    dot(x, y, 'gold')
+  // for (var y = 0; y < 100; y++) {
+  //   var x = y * Math.sqrt(3) / 3
+  //   dot(x, y)
+  // }
+
+  // 画一条跨越画布左上角和右下角的对角线
+  // 绘制原点到xy的直线
+  function line(px, py) {
+    var k = py / px
+    if (k <= 0.5) {
+      for (var x = 0; x < px; x++) {
+        var y = x * k
+        dot(x, y)
+      }
+    } else {
+      for (var y = 0; y < py; y++) {
+        var x = y / k
+        dot(x, y)
+      }
+    }
   }
 
-  for (var x = 900; x <= 1000; x++) { //实心矩形
+  function line2(x1, y1, x2, y2) {
+    px = x2 - x1
+    py = y2 - y1
+
+    var k = py / px
+    if (k <= 0.5) {
+      for (var x = 0; x < px; x++) {
+        var y = x * k
+        dot(x + x1, y + y1)
+      }
+    } else {
+      for (var y = 0; y < py; y++) {
+        var x = y / k
+        dot(x + x1, y + y1)
+      }
+    }
+  }
+
+  function line3(x1, y1, x2, y2) {
+    var k = (y2 - y1) / (x2 - x1)
+    if (k <= 0.5) {
+      // 计算出y的步进是多少
+      for (var x = x1, y = y1; x <= x2; x++, y += k) {
+        dot(x, y)
+      }
+    } else {
+      for (var y = y1, x = x1; y <= y2; y++, x += 1 / k) {
+        dot(x, y)
+      }
+    }
+  }
+
+  function line4(x1, y1, x2, y2) {
+    //计算出y的步进是多少
+    var dx = x2 - x1 // x方向的跨度
+    var dy = y2 - y1 // y方向的跨度
+    var y0 = 0
+    for (var x = x1, y = y1; x <= x2; x++) {
+      dot(x, y)
+      y0 += dy
+      if (y0 >= dx) {
+        y++
+        y0 -= dx
+      }
+    }
+  }
+  //实心矩形
+  for (var x = 900; x <= 1000; x++) {
     for (var y = 0; y <= 150; y++) {
       dot(x, y, 'grey')
     }
   }
 
-  for (var x = 1; x <= 151; x++) { //空心矩形
+  //空心矩形
+  for (var x = 1; x <= 151; x++) {
     for (var y = 200; y <= 300; y++) {
       if (x == 1 || x == 151 || y == 200 || y == 300) {
         dot(x, y, 'grey')
@@ -124,11 +203,16 @@
     }
   }
 
+  // * 画两个空心的圆，圆心在画布中心：
   for (var x = 300; x <= 350; x++) {
     for (var y = 300; y <= 350; y++) {
 
     }
   }
+  // * 一个半径为50像素
+  //     * 一个半径为200像素
+  //     * 画一个实心的圆，半径至少为100像素
+
 </script>
 
 </html>
